[gd_scene load_steps=8 format=2]

[ext_resource path="res://Backgrounds/backgroundColorForest.png" type="Texture" id=1]
[ext_resource path="res://UI/ToucyBubble.theme" type="Theme" id=2]
[ext_resource path="res://Fonts/DigitalDisco.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://UI/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://UI/LevelSelect.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/OptionsMenu.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_size = 8
outline_color = Color( 0.113725, 0.0901961, 0.235294, 1 )
font_data = ExtResource( 3 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 7

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )

[node name="MenuPanel" type="Panel" parent="CanvasLayer/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -150.0
margin_right = 200.0
margin_bottom = 150.0
rect_min_size = Vector2( 400, 300 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/MenuPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -84.0
margin_top = -121.5
margin_right = 84.0
margin_bottom = 121.5
alignment = 1

[node name="TitleLabel" type="Label" parent="CanvasLayer/Control/MenuPanel/VBoxContainer"]
margin_right = 168.0
margin_bottom = 99.0
custom_fonts/font = SubResource( 1 )
text = "Toucy
Bubble"
align = 1
valign = 1

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/Control/MenuPanel/VBoxContainer"]
margin_top = 103.0
margin_right = 168.0
margin_bottom = 243.0
custom_constants/hseparation = 24
columns = 2

[node name="ButtonNewGame" type="Button" parent="CanvasLayer/Control/MenuPanel/VBoxContainer/GridContainer"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )

[node name="Label" type="Label" parent="CanvasLayer/Control/MenuPanel/VBoxContainer/GridContainer"]
margin_left = 56.0
margin_top = 4.0
margin_right = 168.0
margin_bottom = 28.0
text = "New Game"
align = 1

[node name="ButtonHighScore" type="Button" parent="CanvasLayer/Control/MenuPanel/VBoxContainer/GridContainer"]
margin_top = 36.0
margin_right = 32.0
margin_bottom = 68.0
rect_min_size = Vector2( 32, 32 )

[node name="Label2" type="Label" parent="CanvasLayer/Control/MenuPanel/VBoxContainer/GridContainer"]
margin_left = 56.0
margin_top = 40.0
margin_right = 168.0
margin_bottom = 64.0
text = "High Score"
align = 1

[node name="Buttonoptions" type="Button" parent="CanvasLayer/Control/MenuPanel/VBoxContainer/GridContainer"]
margin_top = 72.0
margin_right = 32.0
margin_bottom = 104.0
rect_min_size = Vector2( 32, 32 )

[node name="Label3" type="Label" parent="CanvasLayer/Control/MenuPanel/VBoxContainer/GridContainer"]
margin_left = 56.0
margin_top = 76.0
margin_right = 168.0
margin_bottom = 100.0
text = "Options"
align = 1

[node name="ButtonQuit" type="Button" parent="CanvasLayer/Control/MenuPanel/VBoxContainer/GridContainer"]
margin_top = 108.0
margin_right = 32.0
margin_bottom = 140.0
rect_min_size = Vector2( 32, 32 )

[node name="Label4" type="Label" parent="CanvasLayer/Control/MenuPanel/VBoxContainer/GridContainer"]
margin_left = 56.0
margin_top = 112.0
margin_right = 168.0
margin_bottom = 136.0
text = "Quit"
align = 1

[node name="LevelSelect" parent="CanvasLayer/Control" instance=ExtResource( 5 )]

[node name="OptionsMenu" parent="CanvasLayer/Control" instance=ExtResource( 6 )]

[connection signal="pressed" from="CanvasLayer/Control/MenuPanel/VBoxContainer/GridContainer/ButtonNewGame" to="." method="_on_ButtonNewGame_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/MenuPanel/VBoxContainer/GridContainer/Buttonoptions" to="." method="_on_Buttonoptions_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/MenuPanel/VBoxContainer/GridContainer/ButtonQuit" to="." method="_on_ButtonQuit_pressed"]
